OpenStack Trove image for Flex (generated by Kiro)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,5 +166,6 @@ nav:
       - Placement: containers/placement.md
       - Shibd: containers/shibd.md
       - Skyline: containers/skyline.md
+      - Trove: containers/trove.md
   - Blog: https://blog.rackspacecloud.com/blog
   - Docs: https://docs.rackspacecloud.com
